# pelikan

./: Cargo.toml
src/entrystore/: Cargo.toml
src/entrystore/src/: lib.rs
src/entrystore/src/mixed_ds/: mod.rs  resp.rs
src/server/rds-mixed-ds/: Cargo.toml
src/server/rds-mixed-ds/src/: lib.rs  main.rs
src/storage/mixed_ds/: Cargo.toml
src/storage/mixed_ds/benches/: benchmark.rs
src/storage/mixed_ds/src/: lib.rs
