[package]
name = "mixed-ds"
description = "storage for mixed data types a la Redis such as Lists and Sorted Sets"
authors = ["Dermot Haughey <dermot.thomas.haughey@gmail.com>"]

version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
common = { path = "../../common" }
min-max-heap = "1.3.0"

